Properly invalidate backings of squashed content when it loses its squashing layer.

Previously, in such situations we failed to mark the layer as needing layer requirements
update, which already has code to issue an invalidation on the new backing of the content
now that it lost squashing.

Bug: 865415

Cq-Include-Trybots: luci.chromium.try:linux_layout_tests_slimming_paint_v2;master.tryserver.blink:linux_trusty_blink_rel
Change-Id: I807bf1426e45ce71ed42024512e9c77481f018cc
Reviewed-on: https://chromium-review.googlesource.com/1145896
Commit-Queue: Chris Harrelson <chrishtr@chromium.org>
Reviewed-by: Tien-Ren Chen <trchen@chromium.org>
Cr-Commit-Position: refs/heads/master@{#577404}
Former-commit-id: afd0623808c7cb2cb2f0f4e4fbf470f7bae2b2e5